fixhorizontal scroll

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -5,6 +5,7 @@
 
 html, body {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 html {
     background: linear-gradient(160deg, rgb(0, 0, 0) 20%, rgb(55, 124, 166) 45%, rgb(0, 0, 0) 90%);
